# dnd-tracker

./: .gitignore  DND_CAMPAIGN_ENGINE_ROADMAP_V4.md  LICENSE  MASTERUPDATELIST-DM.md  MASTERUPDATELIST-PLAYER.md  MASTERUPDATELIST.md  README.md  V4_CAMPAIGN_ENGINE_ROADMAP.md  VERSION_BUMP_CHECKLIST.md  install_deps.py  package-lock.json  package.json  push-release.sh  run_servers.sh  setup_frontend.sh  start.sh  sync-version.sh  version.json
.githooks/: pre-push
.github/workflows/: codeql.yml  release.yml
backend/: __init__.py  bug_reporter.py  database.py  main.py  requirements.txt
backend/models/: all_models.py
backend/routers/: backstory.py  characters.py  combat.py  export.py  features.py  import_data.py  inventory.py  journal.py  lore.py  npcs.py  overview.py  party.py  quests.py  rest.py  spells.py  updates.py
backend/schemas/: all_schemas.py
backend/wiki/: __init__.py  database.py  models.py  router.py  schemas.py  search.py  seed.py
frontend/: build.sh  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: srd_monsters.json  wiki.db
src-tauri/src/: campaign_db.rs  campaign_helpers.rs  db.rs  dev_presence.rs  main.rs  migrations.rs  party.rs  session_ws.rs
src-tauri/src/commands/: advanced_systems.rs  auth.rs  backstory.rs  bug_report.rs  campaign_conditions.rs  campaign_extras.rs  campaign_npcs.rs  campaign_quests.rs  campaign_rest.rs  campaigns.rs  character_arcs.rs  characters.rs  combat.rs  combat_log.rs  companions.rs  concentration.rs  consequence_engine.rs  dev_tools.rs  dev_updates.rs  encounters.rs  export.rs  factions.rs  feature_request.rs  features.rs  frontend_log.rs  github_reports.rs  handouts.rs  import.rs  inventory.rs  journal.rs  level_up.rs  lore.rs  mod.rs  monsters.rs  npc_memory.rs  npc_relationships.rs  npcs.rs  ollama.rs  ota_update.rs  overview.rs  (+11 more)
(+1981 files in other folders)
