[package]
name = "the-codex"
version = "0.8.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
tokio = { version = "1", features = ["sync", "macros", "net", "time", "rt", "process"] }
hostname = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
zip = "2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
sha2 = "0.10"
